--- a/src/index.html
+++ b/src/index.html
@@ -4,58 +4,47 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style/main.css">
-   <title>lesson6</title>
+   <title>lesson7</title>
 </head>
 <body>
+   <header class="wrapper">
+     <nav class="wrapper-nav">
+      <ul class="nav">
+        <li>О МИРЕ</li>
+        <li>ЭКОСИСТЕМА</li>
+        <li>РАДЕТЕЛИ</li>
+       </ul>
+       <a href="index.html"><img class="nav__logo" src="img/лого.png" alt="img"></a>
+        <ul class="nav">
+        <li>КОМАНДА</li>
+        <li>ДОКУМЕНТЫ</li>
+        <li>НОВОСТИ</li>
+      </ul>
+     </nav>
 
-<div class="wrapper">
+    <nav class="wrapper-nav--mobile">
 
- <header class="header">
+     <img src="img/лого.png" alt="img">
+      <div id="burger" class="burger">
+       <div class="burger__line"></div>
+       <div class="burger__line"></div>
+       <div class="burger__line"></div> 
+      </div> 
 
-  <ol class="header__nav">
-   <li>О МИРЕ</li>
-   <li>ЭКОСИСТЕМА</li>
-   <li>РАДЕТЕЛИ</li>
-  </ol>
+      <ul id="mob_menu" class="nav--mobile">
+        <span id="close">x</span>
+        <li>О МИРЕ</li>
+        <li>ЭКОСИСТЕМА</li>
+        <li>РАДЕТЕЛИ</li>
+        <li>КОМАНДА</li>
+        <li>ДОКУМЕНТЫ</li>
+        <li>НОВОСТИ</li>
+      </ul>
 
-  <img class="img-log" src="img/лого.png" alt="img">
+    </nav>
+   </header>   
 
-  <ol class="header__nav">
-   <li>КОМАНДА</li>
-   <li>ДОКУМЕНТЫ</li>
-   <li>НОВОСТИ</li>
-  </ol>
-     
- </header>
-
- <div class="big-block">
-
-  <div class="big-block__min-block">
-   <img class="img" src="img/istockphoto-521573881-612x612 1.png" alt="img">
-    <div class="min-block__text">
-     <h1 class="heading">Lorem ipsum dolor</h1><br>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, nostrum suscipit! 
-    </div>
-   </div>
-
-  <div class="big-block__min-block_two">
-   <img class="img" src="img/istockphoto-521573881-612x612 1.png" alt="img">
-    <div class="min-block__text">
-     <h1 class="heading">Lorem ipsum dolor</h1><br>
-     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, nostrum suscipit! 
-   </div>
-  </div>
-
-  <div class="big-block__min-block_tree">
-   <img class="img" src="img/istockphoto-521573881-612x612 1.png" alt="img">
-    <div class="min-block__text">
-     <h1 class="heading">Lorem ipsum dolor</h1><br>
-     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, nostrum suscipit! 
-  </div>
- </div>   
-
- </div>  
-</div>
-
+  <script src="js/script.js"></script>
+  
 </body>
 </html>
