--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       </div> 
 
       <ul id="mob_menu" class="nav--mobile">
-        <span id="close">x</span>
+        <span id="close">х</span>
         <li>О МИРЕ</li>
         <li>ЭКОСИСТЕМА</li>
         <li>РАДЕТЕЛИ</li>
