--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style/main.css">
-   <title>lesson7</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-   <header class="wrapper">
-     <nav class="wrapper-nav">
-      <ul class="nav">
-        <li>О МИРЕ</li>
-        <li>ЭКОСИСТЕМА</li>
-        <li>РАДЕТЕЛИ</li>
-       </ul>
-       <a href="index.html"><img class="nav__logo" src="img/лого.png" alt="img"></a>
-        <ul class="nav">
-        <li>КОМАНДА</li>
-        <li>ДОКУМЕНТЫ</li>
-        <li>НОВОСТИ</li>
-      </ul>
-     </nav>
-
-    <nav class="wrapper-nav--mobile">
-
-     <img src="img/лого.png" alt="img">
-      <div id="burger" class="burger">
-       <div class="burger__line"></div>
-       <div class="burger__line"></div>
-       <div class="burger__line"></div> 
-      </div> 
-
-      <ul id="mob_menu" class="nav--mobile">
-        <span id="close">х</span>
-        <li>О МИРЕ</li>
-        <li>ЭКОСИСТЕМА</li>
-        <li>РАДЕТЕЛИ</li>
-        <li>КОМАНДА</li>
-        <li>ДОКУМЕНТЫ</li>
-        <li>НОВОСТИ</li>
-      </ul>
-
-    </nav>
-   </header>   
-
-  <script src="js/script.js"></script>
-  
+    <h1>JAVASCRIPT</h1>
+<script src="js/script.js"></script>    
 </body>
 </html>
